# BrickGame_v3.0

./: CMakeLists.txt
src/: Docker.sh  Dockerfile  Doxyfile  Makefile
src/brick_game/common/: game_common.c
src/brick_game/snake/: snake.cpp  snake_controller.cpp  snake_view.cpp
src/brick_game/tetris/: field.c  figure.c  fsm.c  utility.c
src/gui/cli/: main_console.cpp  tetris_frontend.c
src/gui/desktop/brick_game/: brick_game.pro  desktop_main.cpp  desktop_main.h  desktop_snake.cpp  desktop_snake.h  desktop_tetris.cpp  desktop_tetris.h  main.cpp  mainwindow.ui
src/inc/: defines.h  game_common.h
src/inc/snake/: snake.h  snake_controller.h  snake_view.h
src/inc/tetris/: figures.h  fsm.h  tetris.h  tetris_frontend.h
src/tests/: test_snake.cpp  test_tetris.c
